outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_14-11-57/evaluations/problem_eval-796887474112906920_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores that combine adaptive weights for regret, distance, and a novel "node centrality" metric (measuring a node's average distance to others), with weights that evolve from exploration-focused (high regret and centrality) to exploitation-focused (low distance and centrality) as nodes are visited. It also incorporates a "path diversity" term to penalize nodes that reduce future options.
                                                                                                                                ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores that combine adaptive weights for regret, distance, and a novel "node centrality" metric (measuring a node's average distance to others), with weights that evolve from exploration-focused (high regret and centrality) to exploitation-focused (low distance and centrality) as nodes are visited. It also incorporates a "path diversity" term to penalize nodes that reduce future options.
                                                                                                                                ^
SyntaxError: unterminated string literal (detected at line 1)
